# win-linux-path_converter

./: README.md  README_EN.md  pyproject.toml
src/stv_path_converter/utils/: lic.py
