[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stv_path_converter"
version = "0.0.1"
authors = [
    { name = "星灿长风v(StarWindv)" },
    { email = "starwindv.stv@gmail.com"}
]
description = "Unix to Windows Path or Windows to Unix path converter"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.6"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "stv_utils"
]
urls = { "Homepage" = "https://github.com/StarWindv/" }

[project.scripts]
stv_path = "stv_path_converter.main:main"